[package]
name = "protocol"
version = "1.0.0"
edition = "2021"

[dependencies]
aes = { version = "0.7.5" }
base64 = "0.13"
hex = "0.4.3"
log = "0.4"
pretty_env_logger = "0.4"
rsa = "0.8.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
sha2 = "0.9"


[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"
